# thesnake

./: .gitignore  .mainwindow.cpp.swp  .mainwindow.h.swp  CMakeLists.txt  Makefile  README.md  compile_commands.json  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  snake.cpp  snake.h  snakke  snakke.pro  tags
.cache/clangd/index/: QMessageBox.68E8D1779FB29426.idx  QRandomGenerator.CB85651763DACFDF.idx  QString.D5BAB144F9E33895.idx  QStyle.24CD08302B7ECF14.idx  QToolBar.B5B7D298EBEBC919.idx  cmath.75609097647522E3.idx  dummy.cpp.E953C16564EA8A93.idx  iostream.D9E1891B8FF7DDEC.idx  main.cpp.4A84FB01AC9644D2.idx  mainwindow.cpp.F7A2C36901099AA7.idx  mainwindow.h.0C5F1865BFB6C70B.idx  math.h.01C27C5330238AC3.idx  mathcalls-narrow.h.6E4F1E49E4D46D1C.idx  mathcalls.h.6E280093246D7E22.idx  mathinline.h.C86CF7859E80EC43.idx  opt_random.h.0019D02865D729EF.idx  qatomic.h.EDA2609CDEFA91A8.idx  qbasictimer.h.5ED9102172314AC8.idx  qcontiguouscache.h.5171549D3848F9B2.idx  qdebug.h.3F2B80A492A80CF6.idx  qdialog.h.E7229027ED7A1EC0.idx  qevent.h.D861E4FE037E834F.idx  qfile.h.9CFC1659DC70ECB7.idx  qfiledevice.h.D522E0A11446F668.idx  qflags.h.041ACBB7FBD8C35E.idx  qframe.h.44B19B831312623F.idx  qglobal.h.2C17EABD0E130173.idx  qiodevice.h.D8761AC119B4CA35.idx  qiterator.h.D85153AA76807357.idx  qlabel.h.C28DEE9D32DA60CF.idx  qlist.h.F3A1871DE33D9905.idx  qlogging.h.BC73A8D36AC8AAF4.idx  qmainwindow.h.F20DFC9B705AE66F.idx  qmessagebox.h.5A223775C382A0A9.idx  qmetatype.h.19B847AEC93D6BFD.idx  qobject.h.0A7B81BA51982969.idx  (+16 more)
headers/: mainwindow.h  snake.h
source/: mainwindow.cpp  snake.cpp
